--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@
 .jumbotron h1 {
   color: #fff;
   font-size: 48px;  
-  font-family: 'Shift', sans-serif;
+  font-family: Calibri;
   font-weight: bold;
 }
 
