--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 }
 
 .jumbotron {
-  background-image:url('https://dl.dropboxusercontent.com/u/12339150/Website%20Resources/Falling-Leaves');
+  background-image:url('https://dl.dropboxusercontent.com/u/12339150/Website%20Resources/FreeAsBird.jpg');
   height: 300px;
   background-repeat: no-repeat;
   background-size: cover;
