--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
+.nav {
+  position: relative;
+  top: 5px;
+}
 .nav a {
   color: #5a5a5a;
   font-size: 11px;
   font-weight: bold;
   padding: 14px 10px;
   text-transform: uppercase;
-  position: relative;
-  top: 10px;
 }
 
 .nav li {
