--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 .nav {
   position: relative;
   top: 2px;
+  background-color: #292929;
 }
 .nav a {
-  color: #5a5a5a;
+  color: #f5f5f5;
   font-size: 11px;
   font-weight: bold;
   padding: 14px 10px;
