--- a/main.css
+++ b/main.css
@@ -5,6 +5,9 @@
   color: #f5f5f5;
   font-size: 11px;
   font-weight: bold;
+  padding: 14px 10px;
+  position: relative;
+  top: 2px;
   text-transform: uppercase;
 }
 
