--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@
 }
 
 .neighborhoodd-guides {
-    background-color: #efefef;
+    background-color: #3a3a3a;
     border-bottom: 1px solid #dbdbdb;
 }
 
@@ -69,7 +69,3 @@
     margin-bottom: 13px;
 }
 
-.thumbnail {
-    width: 600px;
-    overflow: auto;
-}
