--- a/main.css
+++ b/main.css
@@ -44,9 +44,6 @@
   background-color: #3a3a3a;
 }
 
-.learn-more .container {
-  font-color: #eff5f6;
-}
 
 .learn-more h3 {
   font-family: Calibri;
@@ -56,7 +53,7 @@
 }
 
 .learn-more a {
-  color: #eff5f6;
+  color: #3e93ab;
 }
 
 .showcase {
