--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@
 }
 
 .learn-more a {
-  color: #3e93ab;
+  color: #77b3c4;
 }
 
 .showcase {
@@ -61,8 +61,8 @@
 }
 
 .showcase h2 {
-    color: #eff5f6;
-    font-size: 24px;
+    color: #d8e9ee;
+    font-size: 26px;
 }
 
 .showcase p{
