--- a/main.css
+++ b/main.css
@@ -46,9 +46,9 @@
 
 .learn-more h3 {
   font-family: Calibri;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
-  font-color: #eff5f6;
+  font-color: #d8e9ee;
 }
 
 .learn-more a {
