--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@
   font-family: Calibri;
   font-size: 20px;
   font-weight: bold;
-  font-color: #d8e9ee;
+  color: #d8e9ee;
 }
 
 .learn-more a {
