--- a/main.css
+++ b/main.css
@@ -56,7 +56,7 @@
 }
 
 .showcase {
-    background-color: #3a3a3a;
+    background-color: #374163;
     border-bottom: 1px solid #dbdbdb;
     position: relative;
     top: -30px;
