--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@media only screen and (min-width: 760px) {
+    .header p {padding-left: 210px !important ; padding-right: 210px !important;}
+}
+
+
 body {
 	margin-top: 40px;
 	margin-bottom: 50px;
@@ -67,6 +72,4 @@ body {
     text-align: center;
     font-weight: lighter;
     text-shadow: 0px 0px 10px black;
-    padding-left: 210px;
-    padding-right: 210px;
 }
