--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,13 @@ body {
 }
 
 .navbar .container .navbar-header a{
+    text-shadow: 0px 0px 5px #57a6ca;
 	font-size: 20px;
 }
 
 .navbar .container .navbar-header a:hover{
-	color: orange;
+    text-shadow: 0px 0px 10px #006699;
+    color: white;
 }
 
 .navbar .container .navbar-header img {
@@ -42,8 +44,13 @@ body {
 	color: white;
 }
 
+.navbar .container .navbar-collapse a:link{
+    text-shadow: 0px 0px 5px #57a6ca;
+    color: white;
+}
 .navbar .container .navbar-collapse a:hover{
-	color: orange;
+    text-shadow: 0px 0px 10px #006699;
+    color: white;
 }
 
 .full {
@@ -62,14 +69,14 @@ body {
 .header h1 {
 	font-size: 80px;
 	text-align: center;
-	text-shadow: 0px 0px 10px black;
+	text-shadow: 0px 0px 5px #006699;
 }
 
 .header p {
     font-size: 20px;
     text-align: center;
     font-weight: lighter;
-    text-shadow: 0px 0px 10px black;
+    text-shadow: 0px 0px 10px #006699;
 }
 
 .showcase {
@@ -78,14 +85,19 @@ body {
 
 .showcase a {
     color: white;
-    text-shadow: 0px 0px 15px black;
+    text-shadow: 0px 0px 15px #57a6ca;
+}
+
+.showcase a:hover{
+    color: white;
+    text-shadow: 0px 0px 10px #006699;
+    text-decoration: none;
 }
 
 .showcase ul {
     color: transparent;
     text-align: center;
 }
-
 
 .showcase li {
     padding: 20px;
