--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ body {
 }
 
 .full {
-	background: url("../assets/background.jpg") no-repeat center center fixed; 
+	background: url("../assets/backgrounds/background_1.jpg") no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -85,7 +85,7 @@ body {
 
 .showcase a {
     color: white;
-    text-shadow: 0px 0px 15px #57a6ca;
+    text-shadow: 0px 1px 5px #57a6ca;
 }
 
 .showcase a:hover{
