--- a/css/contact.css
+++ b/css/contact.css
@@ -52,7 +52,7 @@
 .contact a {
     color: white;
     padding: 20px;
-    text-shadow: 0px 0px 10px #458b74;
+    text-shadow: 0px 0px 10px black;
 
 }
 
