--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
 	margin-top: 40px;
 	margin-bottom: 50px;
 	background: none;
+	font-weight: 200;
 }
 
 .navbar {
@@ -64,7 +65,6 @@ body {
 }
 
 .header {
-	font-family: Calibri;
 	color: white;
 }
 
@@ -72,12 +72,13 @@ body {
 	font-size: 80px;
 	text-align: center;
 	text-shadow: 0px 0px 5px #006699;
+	font-weight: lighter;
 }
 
 .header p {
 	font-size: 20px;
 	text-align: center;
-	font-weight: lighter;
+	font-weight: 200;
 	text-shadow: 0px 0px 10px #006699;
 }
 
